--- a/index.html
+++ b/index.html
@@ -1092,8 +1092,8 @@
                   </div>
                 </div>
                 <div class="footer_icon_wrapper">
-                  <img src="" alt="보다 나은 정부">
-                  <img src="" alt="웹 접근성 마크">
+                  <a href="#"><img src="./img/main/img_ft_goverment.jpg" alt="보다 나은 정부"></a>
+                  <a href="#"><img src="./img/main/wa_web.svg" alt="웹 접근성 마크"></a>
                 </div>
               </div>
             </div>
