--- a/index_backup1.html
+++ b/index_backup1.html
@@ -12,7 +12,7 @@
     <meta property="og:description" content="혜주의 관공서 포트폴리오" />
     <meta property="og:url" content="https://hejo47.github.io/KISAweb/" />
     <meta property="og:image" content="img/main/img_one.png" />
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/style_backup.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css" rel="stylesheet" />
@@ -42,8 +42,8 @@
     <meta name="theme-color" content="#ffffff" />
   </head>
   <body>
-    <header class="pc" style="height: 100px;">
-      <div class="bg"></div>
+    <header class="pc">
+      <div class="bg">
         <div class="header_wrapper">
           <div class="logo">
             <a href="#"><img src="img/logo/logo_w.png" alt="logo" class="logoImg" /></a>
@@ -52,7 +52,7 @@
             <li class="depth1" onmouseenter="mainHeaderEnterHandler(this)" onmouseleave="mainHeaderLeaveHandler(this)">
               <a href="#">고객서비스</a>
               <div class="depth2_wrapper">
-                <div class="inner" style="height: 443px;">
+                <div class="inner">
                   <h2>고객서비스</h2>
                   <ul class="depth2 first">
                     <li><a href="#">주요서비스</a></li>
@@ -75,7 +75,7 @@
             <li class="depth1" onmouseenter="mainHeaderEnterHandler(this)" onmouseleave="mainHeaderLeaveHandler(this)">
               <a href="#">지식플랫폼</a>
               <div class="depth2_wrapper">
-                <div class="inner" style="height: 541px;">
+                <div class="inner">
                   <h2>지식플랫폼</h2>
                   <ul class="depth2 second">
                     <li><a href="#">연구보고서</a></li>
@@ -99,7 +99,7 @@
             <li class="depth1" onmouseenter="mainHeaderEnterHandler(this)" onmouseleave="mainHeaderLeaveHandler(this)">
               <a href="#">사업소개</a>
               <div class="depth2_wrapper">
-                <div class="inner" style="height: 540px;">
+                <div class="inner">
                   <h2>사업소개</h2>
                   <ul class="depth2 third">
                     <li>
@@ -150,17 +150,11 @@
                 </div>
               </div>
             </li>
-            <li class="depth1" onmouseenter="mainHeaderEnterHandler(this)" onmouseleave="mainHeaderLeaveHandler(this)">
-              <a href="#">주요성과</a>
-              <div class="depth2_wrapper">
-                <div class="inner">
-                </div>
-              </div>
-            </li>
+            <li class="depth1" onmouseenter="mainHeaderEnterHandler(this)" onmouseleave="mainHeaderLeaveHandler(this)"><a href="#">주요성과</a></li>
             <li class="depth1" onmouseenter="mainHeaderEnterHandler(this)" onmouseleave="mainHeaderLeaveHandler(this)">
               <a href="#">알림마당</a>
               <div class="depth2_wrapper">
-                <div class="inner" style="height: 440px;">
+                <div class="inner">
                   <h2>알림마당</h2>
                   <ul class="depth2">
                     <li><a href="#">공지사항</a></li>
@@ -180,7 +174,7 @@
             <li class="depth1" onmouseenter="mainHeaderEnterHandler(this)" onmouseleave="mainHeaderLeaveHandler(this)"">
               <a href="#">ESG 열린경영</a>
               <div class="depth2_wrapper">
-                <div class="inner" style="height: 593px;">
+                <div class="inner">
                   <h2>ESG 열린경영</h2>
                   <ul class="depth2">
                     <li><a href="#">사전정보공표</a></li>
@@ -203,7 +197,7 @@
             <li class="depth1" onmouseenter="mainHeaderEnterHandler(this)" onmouseleave="mainHeaderLeaveHandler(this)"">
               <a href="#">KISA 소개</a>
               <div class="depth2_wrapper">
-                <div class="inner" style="height: 440px;">
+                <div class="inner">
                   <h2>KISA 소개</h2>
                   <ul class="depth2">
                     <li><a href="#">기관장 인사말</a></li>
@@ -235,6 +229,7 @@
             </ul>
           </div>
         </div>
+      </div>
     </header>
     <header class="mo">
       <div class="bg"></div>
