--- a/index.html
+++ b/index.html
@@ -412,6 +412,7 @@
         </div>
       </div>
     </header>
+    <div class="overlay"></div>
     <div id="fullpage" class="section-container">
       <section class="section first">
         <ul class="main_slide_wrapper">
