221215 사이드바 제작

--- a/index.html
+++ b/index.html
@@ -42,6 +42,16 @@
     <meta name="theme-color" content="#ffffff" />
   </head>
   <body>
+    <div class="toolbar_con">
+      <a href="#" class="search_tool">
+        <i class="ri-search-line"></i>
+        <p class="search_tool_p">통합검색</p>
+      </a>
+      <a href="##section1" class="top_tool">
+        <i class="ri-arrow-up-line"></i>
+        <p class="top_tool_p">TOP</p>
+      </a>
+    </div>
     <header class="pc" style="height: 100px;">
       <div class="bg"></div>
         <div class="header_wrapper">
