221215 스크롤 애니매이션 완료

--- a/index.html
+++ b/index.html
@@ -424,6 +424,7 @@
     </header>
     <div class="overlay"></div>
     <div id="fullpage" class="section-container">
+
       <section class="section first">
         <ul class="main_slide_wrapper">
           <li class="main_slide1 main_slide_item active">
@@ -462,6 +463,11 @@
           <li id="mainSlidePause"><i class="ri-pause-mini-fill"></i></li>
           <li id="mainSlideNext"><i class="ri-arrow-right-s-line"></i></li>
         </ul>
+        <div class="scroll_line_ani">
+          <span>Scroll Down</span>
+          <div class="line"></div>
+          <div class="circle"></div>
+        </div>
         <ul class="mainBanner container">
           <li id="one_sq">
             <a href="#">
