221215 커서 애니메이션 완성

--- a/index.html
+++ b/index.html
@@ -432,7 +432,7 @@
             <div class="slide_text">
               <span class="slide_p">Korea Internet & Security Agency</span>
               <p class="main_slide_p">
-                [<span class="slide_blue">KISA</span>]는 <br />안전하고 신뢰할수 있는<br />
+                [<span class="slide_blue kisa"> KISA </span>]는 <br />안전하고 신뢰할수 있는<br />
                 <span class="slide_green">디지털 미래사회</span>를 선도합니다.
               </p>
             </div>
@@ -442,7 +442,7 @@
             <div class="slide_text">
               <span class="slide_p">Korea Internet & Security Agency</span>
               <p class="main_slide_p">
-                [<span class="slide_blue">KISA</span>]와 <br />함께 가꾸는 미래 인터넷<br />
+                [<span class="slide_blue kisa"> KISA </span>]와 <br />함께 가꾸는 미래 인터넷<br />
                 <span class="slide_green">함께 꿈꾸는 안전한 세상</span>
               </p>
             </div>
@@ -453,7 +453,7 @@
               <span class="slide_p">Korea Internet & Security Agency</span>
               <p class="main_slide_p">
                 <span class="slide_green">안전한 디지털 미래</span><br />
-                [<span class="slide_blue">KISA</span>]가 함께 합니다.<br />
+                [<span class="slide_blue kisa"> KISA </span>]가 함께 합니다.<br />
               </p>
             </div>
           </li>
