221215 유효성 검사 위해서 수정한 코드

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <i class="ri-search-line"></i>
         <p class="search_tool_p">통합검색</p>
       </a>
-      <a href="##section1" class="top_tool">
+      <a href="#section1" class="top_tool">
         <i class="ri-arrow-up-line"></i>
         <p class="top_tool_p">TOP</p>
       </a>
@@ -187,7 +187,7 @@
                 </div>
               </div>
             </li>
-            <li class="depth1" onmouseenter="mainHeaderEnterHandler(this)" onmouseleave="mainHeaderLeaveHandler(this)"">
+            <li class="depth1" onmouseenter="mainHeaderEnterHandler(this)" onmouseleave="mainHeaderLeaveHandler(this)">
               <a href="#">ESG 열린경영</a>
               <div class="depth2_wrapper">
                 <div class="inner" style="height: 433px;">
@@ -210,7 +210,7 @@
                 </div>
               </div>
             </li>
-            <li class="depth1" onmouseenter="mainHeaderEnterHandler(this)" onmouseleave="mainHeaderLeaveHandler(this)"">
+            <li class="depth1" onmouseenter="mainHeaderEnterHandler(this)" onmouseleave="mainHeaderLeaveHandler(this)">
               <a href="#">KISA 소개</a>
               <div class="depth2_wrapper">
                 <div class="inner" style="height: 340px;">
@@ -431,30 +431,30 @@
             <img src="img/main/main_slide_01.jpg" alt="main_slide_01">
             <div class="slide_text">
               <span class="slide_p">Korea Internet & Security Agency</span>
-              <p class="main_slide_p">
+              <h2 class="main_slide_p">
                 [<span class="slide_blue kisa"> KISA </span>]는 <br>안전하고 신뢰할수 있는<br>
                 <span class="slide_green">디지털 미래사회</span>를 선도합니다.
-              </p>
+              </h2>
             </div>
           </li>
           <li class="main_slide2 main_slide_item">
             <img src="img/main/main_slide_02.jpg" alt="main_slide_02">
             <div class="slide_text">
               <span class="slide_p">Korea Internet & Security Agency</span>
-              <p class="main_slide_p">
+              <h2 class="main_slide_p">
                 [<span class="slide_blue kisa"> KISA </span>]와 <br>함께 가꾸는 미래 인터넷<br>
                 <span class="slide_green">함께 꿈꾸는 안전한 세상</span>
-              </p>
+              </h2>
             </div>
           </li>
           <li class="main_slide3 main_slide_item">
             <img src="img/main/main_slide_03.jpg" alt="main_slide_03">
             <div class="slide_text">
               <span class="slide_p">Korea Internet & Security Agency</span>
-              <p class="main_slide_p">
+              <h2 class="main_slide_p">
                 <span class="slide_green">안전한 디지털 미래</span><br>
                 [<span class="slide_blue kisa"> KISA </span>]가 함께 합니다.<br>
-              </p>
+              </h2>
             </div>
           </li>
         </ul>
@@ -652,131 +652,131 @@
               </div>
               <ul class="notice_list on" id="tab_all">
                 <li>
-                  <a href="#">all all 하반기 한국인터넷진흥원 정규직 공개채용</a>
+                  <a href="#"><h4>all all 하반기 한국인터넷진흥원 정규직 공개채용</h4></a>
                   <div>2022.10.14</div>
                 </li>
                 <li>
-                  <a href="#">2022년도 하반기 한국인터넷진흥원 정규직 공개채용</a>
+                  <a href="#"><h4>2022년도 하반기 한국인터넷진흥원 정규직 공개채용</h4></a>
                   <div>2022.10.14</div>
                 </li>
                 <li>
-                  <a href="#">2022년도 하반기 한국인터넷진흥원 정규직 공개채용</a>
+                  <a href="#"><h4>2022년도 하반기 한국인터넷진흥원 정규직 공개채용</h4></a>
                   <div>2022.10.14</div>
                 </li>
                 <li>
-                  <a href="#">2022년도 하반기 한국인터넷진흥원 정규직 공개채용</a>
+                  <a href="#"><h4>2022년도 하반기 한국인터넷진흥원 정규직 공개채용</h4></a>
                   <div>2022.10.14</div>
                 </li>
                 <li>
-                  <a href="#">2022년도 하반기 한국인터넷진흥원 정규직 공개채용</a>
+                  <a href="#"><h4>2022년도 하반기 한국인터넷진흥원 정규직 공개채용</h4></a>
                   <div>2022.10.14</div>
                 </li>
                 <li>
-                  <a href="#">2022년도 하반기 한국인터넷진흥원 정규직 공개채용</a>
+                  <a href="#"><h4>2022년도 하반기 한국인터넷진흥원 정규직 공개채용</h4></a>
                   <div>2022.10.14</div>
                 </li>
               </ul>
               <ul class="notice_list" id="tab_notice">
                 <li>
-                  <a href="#">공지공지 하반기 한국인터넷진흥원 정규직 공개채용</a>
+                  <a href="#"><h4>공지공지 하반기 한국인터넷진흥원 정규직 공개채용</h4></a>
                   <div>2022.10.14</div>
                 </li>
                 <li>
-                  <a href="#">2022년도 하반기 한국인터넷진흥원 정규직 공개채용</a>
+                  <a href="#"><h4>2022년도 하반기 한국인터넷진흥원 정규직 공개채용</h4></a>
                   <div>2022.10.14</div>
                 </li>
                 <li>
-                  <a href="#">2022년도 하반기 한국인터넷진흥원 정규직 공개채용</a>
+                  <a href="#"><h4>2022년도 하반기 한국인터넷진흥원 정규직 공개채용</h4></a>
                   <div>2022.10.14</div>
                 </li>
                 <li>
-                  <a href="#">2022년도 하반기 한국인터넷진흥원 정규직 공개채용</a>
+                  <a href="#"><h4>2022년도 하반기 한국인터넷진흥원 정규직 공개채용</h4></a>
                   <div>2022.10.14</div>
                 </li>
                 <li>
-                  <a href="#">2022년도 하반기 한국인터넷진흥원 정규직 공개채용</a>
+                  <a href="#"><h4>2022년도 하반기 한국인터넷진흥원 정규직 공개채용</h4></a>
                   <div>2022.10.14</div>
                 </li>
                 <li>
-                  <a href="#">2022년도 하반기 한국인터넷진흥원 정규직 공개채용</a>
+                  <a href="#"><h4>2022년도 하반기 한국인터넷진흥원 정규직 공개채용</h4></a>
                   <div>2022.10.14</div>
                 </li>
               </ul>
               <ul class="notice_list" id="tab_info">
                 <li>
-                  <a href="#">정보정보 하반기 한국인터넷진흥원 정규직 공개채용</a>
+                  <a href="#"><h4>정보정보 하반기 한국인터넷진흥원 정규직 공개채용</h4></a>
                   <div>2022.10.14</div>
                 </li>
                 <li>
-                  <a href="#">2022년도 하반기 한국인터넷진흥원 정규직 공개채용</a>
+                  <a href="#"><h4>2022년도 하반기 한국인터넷진흥원 정규직 공개채용</h4></a>
                   <div>2022.10.14</div>
                 </li>
                 <li>
-                  <a href="#">2022년도 하반기 한국인터넷진흥원 정규직 공개채용</a>
+                  <a href="#"><h4>2022년도 하반기 한국인터넷진흥원 정규직 공개채용</h4></a>
                   <div>2022.10.14</div>
                 </li>
                 <li>
-                  <a href="#">2022년도 하반기 한국인터넷진흥원 정규직 공개채용</a>
+                  <a href="#"><h4>2022년도 하반기 한국인터넷진흥원 정규직 공개채용</h4></a>
                   <div>2022.10.14</div>
                 </li>
                 <li>
-                  <a href="#">2022년도 하반기 한국인터넷진흥원 정규직 공개채용</a>
+                  <a href="#"><h4>2022년도 하반기 한국인터넷진흥원 정규직 공개채용</h4></a>
                   <div>2022.10.14</div>
                 </li>
                 <li>
-                  <a href="#">2022년도 하반기 한국인터넷진흥원 정규직 공개채용</a>
+                  <a href="#"><h4>2022년도 하반기 한국인터넷진흥원 정규직 공개채용</h4></a>
                   <div>2022.10.14</div>
                 </li>
               </ul>
               <ul class="notice_list" id="tab_employ">
                 <li>
-                  <a href="#">채용채용 하반기 한국인터넷진흥원 정규직 공개채용</a>
+                  <a href="#"><h4>채용채용 하반기 한국인터넷진흥원 정규직 공개채용</h4></a>
                   <div>2022.10.14</div>
                 </li>
                 <li>
-                  <a href="#">2022년도 하반기 한국인터넷진흥원 정규직 공개채용</a>
+                  <a href="#"><h4>2022년도 하반기 한국인터넷진흥원 정규직 공개채용</h4></a>
                   <div>2022.10.14</div>
                 </li>
                 <li>
-                  <a href="#">2022년도 하반기 한국인터넷진흥원 정규직 공개채용</a>
+                  <a href="#"><h4>2022년도 하반기 한국인터넷진흥원 정규직 공개채용</h4></a>
                   <div>2022.10.14</div>
                 </li>
                 <li>
-                  <a href="#">2022년도 하반기 한국인터넷진흥원 정규직 공개채용</a>
+                  <a href="#"><h4>2022년도 하반기 한국인터넷진흥원 정규직 공개채용</h4></a>
                   <div>2022.10.14</div>
                 </li>
                 <li>
-                  <a href="#">2022년도 하반기 한국인터넷진흥원 정규직 공개채용</a>
+                  <a href="#"><h4>2022년도 하반기 한국인터넷진흥원 정규직 공개채용</h4></a>
                   <div>2022.10.14</div>
                 </li>
                 <li>
-                  <a href="#">2022년도 하반기 한국인터넷진흥원 정규직 공개채용</a>
+                  <a href="#"><h4>2022년도 하반기 한국인터넷진흥원 정규직 공개채용</h4></a>
                   <div>2022.10.14</div>
                 </li>
               </ul>
               <ul class="notice_list" id="tab_bid">
                 <li>
-                  <a href="#">입찰입찰 하반기 한국인터넷진흥원 정규직 공개채용</a>
+                  <a href="#"><h4>입찰입찰 하반기 한국인터넷진흥원 정규직 공개채용</h4></a>
                   <div>2022.10.14</div>
                 </li>
                 <li>
-                  <a href="#">2022년도 하반기 한국인터넷진흥원 정규직 공개채용</a>
+                  <a href="#"><h4>2022년도 하반기 한국인터넷진흥원 정규직 공개채용</h4></a>
                   <div>2022.10.14</div>
                 </li>
                 <li>
-                  <a href="#">2022년도 하반기 한국인터넷진흥원 정규직 공개채용</a>
+                  <a href="#"><h4>2022년도 하반기 한국인터넷진흥원 정규직 공개채용</h4></a>
                   <div>2022.10.14</div>
                 </li>
                 <li>
-                  <a href="#">2022년도 하반기 한국인터넷진흥원 정규직 공개채용</a>
+                  <a href="#"><h4>2022년도 하반기 한국인터넷진흥원 정규직 공개채용</h4></a>
                   <div>2022.10.14</div>
                 </li>
                 <li>
-                  <a href="#">2022년도 하반기 한국인터넷진흥원 정규직 공개채용</a>
+                  <a href="#"><h4>2022년도 하반기 한국인터넷진흥원 정규직 공개채용</h4></a>
                   <div>2022.10.14</div>
                 </li>
                 <li>
-                  <a href="#">2022년도 하반기 한국인터넷진흥원 정규직 공개채용</a>
+                  <a href="#"><h4>2022년도 하반기 한국인터넷진흥원 정규직 공개채용</h4></a>
                   <div>2022.10.14</div>
                 </li>
               </ul>
@@ -903,7 +903,7 @@
                   <span>대표번호 : <a href="#">1433-25</a>(수신자 요금 부담)</span>
                   <span>[해킹ㆍ스팸개인정보침해 신고 <a href="#">118</a>]</span>
                 </div>
-                <span class="copy">Copyright(C) 2021 KISA. All rights reserved.</span>
+                <h6 class="copy">Copyright(C) 2021 KISA. All rights reserved.</h6>
               </div>
               <div class="right">
                 <div class="trans_site_wrap">
