221215 유효성 검사 통과(html)

--- a/index.html
+++ b/index.html
@@ -929,6 +929,8 @@
                 <div class="footer_icon_wrapper">
                   <a href="#"><img src="./img/main/img_ft_goverment.jpg" alt="보다 나은 정부"></a>
                   <a href="#"><img src="./img/main/wa_web.svg" alt="웹 접근성 마크"></a>
+                  <a href="https://validator.w3.org/check?uri=https://hejo47.github.io/KISAweb/"><img src="https://www.w3.org/QA/Tools/I_heart_validator_lg" alt="유효성검사"></a>
+                  
                 </div>
               </div>
             </div>
