--- a/index.html
+++ b/index.html
@@ -13,16 +13,16 @@
     <meta property="og:url" content="https://hejo47.github.io/KISAweb/" />
     <meta property="og:image" content="img/main/img_one.png" />
     <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/remixicon.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css" rel="stylesheet" />
+    <!-- <link href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css" rel="stylesheet" /> -->
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;300;500;700;900&family=Roboto:wght@100;300;400;500;700;900&display=swap" rel="stylesheet" />
     <script src="https://code.jquery.com/jquery-3.6.1.min.js" integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ=" crossorigin="anonymous"></script>
     <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fullPage.js/2.9.7/jquery.fullpage.min.css" integrity="sha512-q54FvbV+gGBn+NvgaD4gpJ7w4wrO00DgW7Rx503PIhrf0CuMwLOwbS+bXgOBFSob+6GVy1HDPfaRLJ8w2jiS4g==" crossorigin="anonymous" referrerpolicy="no-referrer" /> -->
     <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/fullPage.js/2.9.7/jquery.fullpage.min.js" crossorigin="anonymous"></script> -->
     <script src="js/js.fullpage.js"></script>
     <link rel="stylesheet" href="css/jquery.fullpage.css" />
-    <!-- <link rel="stylesheet" href="css/remixicon.css" /> -->
     <title>KISA 한국인터넷진흥원</title>
     <!-- favicon -->
     <link rel="shortcut icon" href="./img/logo/favicon.ico" type="image/x-icon" />
