221216 푸터 주소 수정

--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
       <div class="bg"></div>
       <div class="header_wrapper">
         <div class="logo">
-          <a href="#"><img src="img/logo/logo.png" alt="logo" class="logoImg"></a>
+          <a href="https://hejo47.github.io/KISAweb/"><img src="img/logo/logo.png" alt="logo" class="logoImg"></a>
         </div>
         <ul class="header_menu">
           <li class="depth1">
@@ -931,7 +931,7 @@
                   <a href="#"><img src="./img/main/img_ft_goverment.jpg" alt="보다 나은 정부"></a>
                   <a href="#"><img src="./img/main/wa_web.svg" alt="웹 접근성 마크"></a>
                   <a href="https://validator.w3.org/check?uri=https://hejo47.github.io/KISAweb/"><img src="https://www.w3.org/QA/Tools/I_heart_validator_lg" alt="html유효성검사"></a>
-                  <a href="https://jigsaw.w3.org/css-validator/validator?uri=내프로젝트주소"><img src="https://jigsaw.w3.org/css-validator/images/vcss" alt="css유효성검사"></a>
+                  <a href="https://jigsaw.w3.org/css-validator/validator?uri=https://hejo47.github.io/KISAweb/"><img src="https://jigsaw.w3.org/css-validator/images/vcss" alt="css유효성검사"></a>
                 </div>
               </div>
             </div>
