--- a/index.html
+++ b/index.html
@@ -47,15 +47,19 @@
   <body>
     <dl class="skip_menu">
       <dt>바로가기 메뉴</dt>
-      <dd><a href="#section1" tabindex="1">메인화면 바로가기</a></dd>
-      <dd><a href="#section2" tabindex="2">주요성과 바로가기</a></dd>
-      <dd><a href="#section3" tabindex="3">알림마당 바로가기</a></dd>
+      <dd><a href="#main" tabindex="1">메인화면 바로가기</a></dd>
+      <dd><a href="#business" tabindex="2">주요성과 바로가기</a></dd>
+      <dd><a href="#News" tabindex="3">알림마당 바로가기</a></dd>
     </dl>
+    <div class="toolbar_con">
+      <a href="#" class="search_tool"><i class="ri-search-line"></i><p>전체검색</p></a>
+      <a href="#main" class="top_tool"><i class="ri-arrow-up-line"></i><p>TOP</p></a>
+    </div>
     <header class="pc" style="height: 100px;">
       <div class="bg"></div>
       <div class="header_wrapper">
         <div class="logo">
-          <a href="#section3"><img src="img/logo/logo_w.png" alt="logo" class="logoImg"></a>
+          <a href="#main"><img src="img/logo/logo_w.png" alt="logo" class="logoImg"></a>
         </div>
         <ul class="header_menu">
           <li class="depth1" onmouseenter="mainHeaderEnterHandler(this)" onmouseleave="mainHeaderLeaveHandler(this)">
@@ -244,7 +248,7 @@
         </div>
       </div>
     </header>
-    <!-- <header class="mo">
+    <header class="mo">
       <div class="bg"></div>
       <div class="header_wrapper">
         <div class="logo">
@@ -419,10 +423,10 @@
           </ul>
         </div>
       </div>
-    </header> -->
+    </header>
     <div class="overlay"></div>
     <div id="fullpage" class="section-container">
-      <section class="section first">
+      <section class="section first" id="main">
         <ul class="main_slide_wrapper">
           <li class="main_slide1 main_slide_item active">
             <img src="img/main/main_slide_01.jpg" alt="main_slide_01">
@@ -492,7 +496,7 @@
           </li>
         </ul>
       </section>
-      <section class="section second">
+      <section class="section second" id="business">
         <div class="container">
           <div class="business">
             <h6 class="business_text1">Business</h6>
@@ -627,7 +631,7 @@
           </div>
         </div>
       </section>
-      <section class="section third">
+      <section class="section third" id="news">
         <div class="container">
           <div class="third_title">
             <h5>News</h5>
