221218 스타일 정리

--- a/index.html
+++ b/index.html
@@ -426,7 +426,7 @@
     </header>
     <div class="overlay"></div>
     <div id="fullpage" class="section-container">
-      <section class="section first" id="main">
+      <section class="section first" id="mainSection">
         <ul class="main_slide_wrapper">
           <li class="main_slide1 main_slide_item active">
             <img src="img/main/main_slide_01.jpg" alt="main_slide_01">
@@ -496,7 +496,7 @@
           </li>
         </ul>
       </section>
-      <section class="section second" id="business">
+      <section class="section second" id="businessSection">
         <div class="container">
           <div class="business">
             <h6 class="business_text1">Business</h6>
@@ -631,7 +631,7 @@
           </div>
         </div>
       </section>
-      <section class="section third" id="news">
+      <section class="section third" id="newsSection">
         <div class="container">
           <div class="third_title">
             <h5>News</h5>
