221218 풀페이지 아이디 설정 오류 수정

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
       <dt>바로가기 메뉴</dt>
       <dd><a href="#main" tabindex="1">메인화면 바로가기</a></dd>
       <dd><a href="#business" tabindex="2">주요성과 바로가기</a></dd>
-      <dd><a href="#News" tabindex="3">알림마당 바로가기</a></dd>
+      <dd><a href="#news" tabindex="3">알림마당 바로가기</a></dd>
     </dl>
     <div class="toolbar_con">
       <a href="#" class="search_tool"><i class="ri-search-line"></i><p>전체검색</p></a>
@@ -426,7 +426,7 @@
     </header>
     <div class="overlay"></div>
     <div id="fullpage" class="section-container">
-      <section class="section first" id="mainSection">
+      <section class="section first">
         <ul class="main_slide_wrapper">
           <li class="main_slide1 main_slide_item active">
             <img src="img/main/main_slide_01.jpg" alt="main_slide_01">
@@ -496,7 +496,7 @@
           </li>
         </ul>
       </section>
-      <section class="section second" id="businessSection">
+      <section class="section second">
         <div class="container">
           <div class="business">
             <h6 class="business_text1">Business</h6>
@@ -631,7 +631,7 @@
           </div>
         </div>
       </section>
-      <section class="section third" id="newsSection">
+      <section class="section third">
         <div class="container">
           <div class="third_title">
             <h5>News</h5>
