--- a/index.html
+++ b/index.html
@@ -22,7 +22,9 @@
     <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fullPage.js/2.9.7/jquery.fullpage.min.css" integrity="sha512-q54FvbV+gGBn+NvgaD4gpJ7w4wrO00DgW7Rx503PIhrf0CuMwLOwbS+bXgOBFSob+6GVy1HDPfaRLJ8w2jiS4g==" crossorigin="anonymous" referrerpolicy="no-referrer"> -->
     <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/fullPage.js/2.9.7/jquery.fullpage.min.js" crossorigin="anonymous"></script> -->
     <script src="js/js.fullpage.js"></script>
+    <script src="js/fullpage.js"></script>
     <link rel="stylesheet" href="css/jquery.fullpage.css">
+    <link rel="stylesheet" href="css/fullpage.css">
     <title>KISA 한국인터넷진흥원</title>
     <!-- favicon -->
     <link rel="shortcut icon" href="./img/logo/favicon.ico" type="image/x-icon">
