--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
     <script src="https://code.jquery.com/jquery-3.6.1.min.js" integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ=" crossorigin="anonymous"></script>
     <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fullPage.js/2.9.7/jquery.fullpage.min.css" integrity="sha512-q54FvbV+gGBn+NvgaD4gpJ7w4wrO00DgW7Rx503PIhrf0CuMwLOwbS+bXgOBFSob+6GVy1HDPfaRLJ8w2jiS4g==" crossorigin="anonymous" referrerpolicy="no-referrer"> -->
     <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/fullPage.js/2.9.7/jquery.fullpage.min.js" crossorigin="anonymous"></script> -->
-    <script src="js/js.fullpage.js"></script>
+    <!-- <script src="js/js.fullpage.js"></script> -->
     <script src="js/fullpage.js"></script>
-    <link rel="stylesheet" href="css/jquery.fullpage.css">
+    <!-- <link rel="stylesheet" href="css/jquery.fullpage.css"> -->
     <link rel="stylesheet" href="css/fullpage.css">
     <title>KISA 한국인터넷진흥원</title>
     <!-- favicon -->
@@ -427,7 +427,7 @@
     </header>
     <div class="overlay"></div>
     <div id="fullpage" class="section-container">
-      <section class="section first">
+      <section class="section first" id="sectionMain">
         <ul class="main_slide_wrapper">
           <li class="main_slide1 main_slide_item active">
             <img src="img/main/main_slide_01.jpg" alt="main_slide_01">
@@ -497,7 +497,7 @@
           </li>
         </ul>
       </section>
-      <section class="section second">
+      <section class="section second" id="sectionBusiness">
         <div class="container">
           <div class="business">
             <h6 class="business_text1">Business</h6>
@@ -632,7 +632,7 @@
           </div>
         </div>
       </section>
-      <section class="section third">
+      <section class="section third" id="sectionNews">
         <div class="container">
           <div class="third_title">
             <h5>News</h5>
