--- a/index.html
+++ b/index.html
@@ -1,6 +1,15 @@
 <!DOCTYPE html>
 <html lang="ko">
   <head>
+      <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-ZNF0ED9MNK"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-ZNF0ED9MNK');
+    </script>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -46,6 +55,7 @@
     <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
     <meta name="theme-color" content="#ffffff">
   </head>
+  
   <body>
     <dl class="skip_menu">
       <dt>바로가기 메뉴</dt>
@@ -427,7 +437,7 @@
     </header>
     <div class="overlay"></div>
     <div id="fullpage" class="section-container">
-      <section class="section first" id="sectionMain">
+      <section class="section first">
         <ul class="main_slide_wrapper">
           <li class="main_slide1 main_slide_item active">
             <img src="img/main/main_slide_01.jpg" alt="main_slide_01">
@@ -497,7 +507,7 @@
           </li>
         </ul>
       </section>
-      <section class="section second" id="sectionBusiness">
+      <section class="section second">
         <div class="container">
           <div class="business">
             <h6 class="business_text1">Business</h6>
@@ -632,7 +642,7 @@
           </div>
         </div>
       </section>
-      <section class="section third" id="sectionNews">
+      <section class="section third">
         <div class="container">
           <div class="third_title">
             <h5>News</h5>
