--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
     <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/fullPage.js/2.9.7/jquery.fullpage.min.js" crossorigin="anonymous"></script> -->
     <!-- <script src="js/js.fullpage.js"></script> -->
     <script src="js/fullpage.js"></script>
-    <!-- <link rel="stylesheet" href="css/jquery.fullpage.css"> -->
-    <link rel="stylesheet" href="css/fullpage.css">
+    <link rel="stylesheet" href="css/jquery.fullpage.css">
+    <!-- <link rel="stylesheet" href="css/fullpage.css"> -->
     <title>KISA 한국인터넷진흥원</title>
     <!-- favicon -->
     <link rel="shortcut icon" href="./img/logo/favicon.ico" type="image/x-icon">
