221220 레이어 제작

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <meta name="author" content="강혜주">
     <meta name="keyword" content="포트폴리오, 강혜주, 프론트엔드">
     <meta property="og:title" content="혜주의 포트폴리오">
-    <meta property="og:description" content="혜주의 관공서 포트폴리오">
+    <meta property="og:description" content="혜주의 관공서 포트폴리오, 본 페이지는 상업적 목적이 없는 구직용 페이지입니다.">
     <meta property="og:url" content="https://hejo47.github.io/KISAweb/">
     <meta property="og:image" content="img/main/img_one.png">
     <link rel="stylesheet" href="css/style.css">
@@ -63,6 +63,11 @@
       <dd><a href="#business" tabindex="2">주요성과 바로가기</a></dd>
       <dd><a href="#news" tabindex="3">알림마당 바로가기</a></dd>
     </dl>
+    <div id="layer">
+      <p>이 사이트는 학습용으로 제작하였으며 한국인터넷진흥원과 무관합니다.
+        구직용 포트폴리오로 상업적 목적이 없음을 알립니다.</p>
+        <button>닫기</button>
+    </div>
     <div class="toolbar_con">
       <a href="#" class="search_tool"><i class="ri-search-line"></i><p>전체검색</p></a>
       <a href="#main" class="top_tool"><i class="ri-arrow-up-line"></i><p>TOP</p></a>
